Release Notes:

- The below changes are part of release 5.0.2

- Introducing Liquibase for all database migrations
- Recaptcha validation can be disabled if running in saas mode

-----------------------------------------------------------------------------------

- The below changes are part of release 5.0.1

- Now users can request for multiple acls in one request. Earlier it was either one IP address or one Principle in one request.
- Minor bug fix

-----------------------------------------------------------------------------------

The below changes are part of release Kafkawize 5.0.0

Total Kafkawize pro code is merged to Opensource version. Includes all the features.

Features:

Topics (approval): Create, Update, Delete, Promote
Acls (approval):  Create
Connectors (approval): Create
Avro Schemas (approval): Create
Topic Overview :
    Topic Config
    Promote
    Literal and Prefixed subscriptions
    Topic documentation
    Consumer offsets/ lag
    View topic contents
View created, completed, declined, all Topic requests
View created, completed, declined, all Acl requests
View created, completed, declined, all Connector requests
View created, completed, declined, all Avro schema requests

Synchronization from and to kafka clusters
Reconciliation and email notifications on differences between Kafkawize and Clusters
Restore configuration (topics, acls)

Login :
    Active directory integration
    Single Sign-on (OAuth2)

Clusters and Environments
    Clusters can be created connecting to Kafka clusters. (Cluster Management Api should be configured)
    Environments are wrappers over clusters, enforcing flexible configs like prefix, suffix etc

Users, Teams & Authorizations
    Configurable users, teams
    More than 35 permissions
    Configurable roles (Roles can be pulled from AD for authorization)

Topic naming conventions
    Enforce prefix and suffixes per environment

Excel report (for your team and all teams, depending on the role)