@@ -1,0 +1,5 @@
+package com.kafkamgt.uiapi.model;
+
+public enum AclIPPrincipleType {
+    IP_ADDRESS, PRINCIPLE, USERNAME
+}
