@@ -670,7 +670,7 @@
 																<h6 class="text-primary">IP Address</h6><b>*</b>
 															</div>
 															<div ng-show="aclRequest.acl_ssl != null" class="p-2 border-right" style="width:30%">
-																<h6 class="text-primary">Principle</h6><b>{{ aclRequest.acl_ssl }}</b>
+																<h6 class="text-primary">Principle / Username</h6><b>{{ aclRequest.acl_ssl }}</b>
 															</div>
 
 															<div class="p-2" style="width:15%">
