@@ -526,7 +526,7 @@
 										<h6 class="text-primary">IP Address</h6><b>*</b>
 									</div>
 									<div ng-show="aclRequest.acl_ssl != null" class="p-2 border-right" style="width:30%">
-										<h6 class="text-primary">Principle</h6>
+										<h6 class="text-primary">Principle / Username</h6>
 										<table>
 											<tr ng-repeat="onessl in aclRequest.acl_ssl">
 												<td>
